--- a/packages/gazelle_cli/pubspec.yaml
+++ b/packages/gazelle_cli/pubspec.yaml
@@ -12,6 +12,7 @@ executables:
 dev_dependencies:
   lints: ">=3.0.0 <5.0.0"
   test: ^1.24.0
+  mocktail: ^1.0.4
 dependencies:
   analyzer: ^6.5.0
   args: ^2.5.0
